- disable liquid and water sliders when beaker is full?

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- add cursors to all things that are interactive
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc
- organize imports


DONE:
7/11/08 - handle 10^1 display differently, for example display 9x10 as 90
7/11/08 - fix: linear ticks don't go away when switching from log to linear
7/11/08 - change particle default settings
7/11/08 - change liquid colors
7/11/08 - replace cola with lime soda
7/11/08 - use bold font for molecule counts and bar values
******* version 0.00.13 (23096)
7/11/08 - do a quick approximation of lining up pH slider ticks with bar graph ticks
7/11/08 - fix layout of everything
7/11/08 - increase height of graph
7/11/08 - increase size of beaker
7/10/08 - molecule count check box off by default
******* version 0.00.12 (23089)
7/10/08 - fix: resolve Laurie's problem by replacing ScaleAlphaImageOpARGB with image files for big, transparent molecules
7/10/08 - remove scaling of small molecule images, scale the image files
7/10/08 - change sim description
7/10/08 - add sim description
7/10/08 - organize imports
7/10/08 - fix: hand cursor should be on faucet slider knob only, not on track
7/10/08 - fix: select some liquid (eg, blood), change pH, selecting blood again doesn't do anything
******* version 0.00.11 (23070)
7/9/08 - organize imports
7/9/08 - make icons in molecule view transparent
7/9/08 - add BufferedImageUtils.scaleAlpha
7/9/08 - add developer control for switching to alternate (simpler) molecule count view
7/9/08 - implement the molecule count view shown in the design doc
7/9/08 - add Shapes and nodes for bars, but shapes are not updated yet
7/9/08 - add zoom buttons to bar graph, wire them up to tick labels
7/9/08 - wire up log/linear scale control to bar graph