@@ -35,6 +35,8 @@ CLEANUP:
 
 
 DONE:
+7/11/08 - when switching from log to linear scale, reset y-axis range so that it's zoomed all the way out
+7/11/08 - add y-axis label to bar graph, remove units from upper-left corner of graph interior
 7/11/08 - handle 10^1 display differently, for example display 9x10 as 90
 7/11/08 - fix: linear ticks don't go away when switching from log to linear
 7/11/08 - change particle default settings
